# x-bot

./: .dockerignore  .gitignore  AGENTS.md  CODE_OVERVIEW.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  main.py  package.json  pyproject.toml  tailwind.config.js  test_llm.py  test_read_post.py
.cursor/rules/: project-rules.mdc
.github/workflows/: deploy-website.yml
agent/: README.md  __init__.py  core.py  personality.py
config/: .env.example  agent_prompt.txt  config.yaml  config.yaml.bak  env.template
presentation/: index.html  styles.css
src/: constants.py  main.py
src/core/: __init__.py  config.py  env.py  evaluation.py  interest.py  langchain_clients.py  llm.py  llm_parsing.py  prompts.py
src/core/graph/: __init__.py  notifications.py  reading.py  replies.py  tweet_generation.py
src/memory/: __init__.py  chroma_client.py
src/monitoring/: data_tracker.py  logging_config.py  token_logging.py
src/scheduler/: __init__.py  bootstrap.py  bot_scheduler.py  control_server.py  job_wrapper.py  jobs.py  runtime.py
src/scheduler/jobs/: __init__.py  inspiration.py  notifications.py  posting.py  reading.py  replies.py
src/state/: __init__.py  database.py  lifecycle.py  manager.py  models.py
src/web/: __init__.py  app.py  auth.py  data_tracker.py  deps.py  settings.py
src/web/routes/: __init__.py  api.py  auth.py  views.py
src/web/static/: build.css  styles.css
src/web/static/js/: alpine-init.js
src/web/static/tailwind/: input.css
src/web/templates/: analytics.html  base.html  chat.html  dashboard.html  login.html  logs.html  posts.html  settings.html
src/web/templates/partials/: interested_list.html  pagination.html  posts_list.html  rejected_list.html  token_analytics.html  tweets_list.html
src/x/: __init__.py  auth.py  driver.py  notifications.py  parser.py  posting.py  reading.py  replies.py  session.py
tests/: __init__.py  test_inspiration.py  test_interest.py  test_jobs.py  test_parser.py  test_reading.py  test_scheduler.py
website/: index.html  script.js  styles.css
website/presentation/: index.html  styles.css
x/: __init__.py  reader.py  utils.py
