[project]
name = "x-bot"
version = "0.0.1"
description = "Small ð• bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.1",
    "openai>=2.7.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "selenium-stealth>=1.0.6",
    "twscrape>=0.17.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
